--- a/web/index.html
+++ b/web/index.html
@@ -55,6 +55,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
+    />
   </head>
   <body>
     <!-- nav -->
@@ -86,18 +90,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <li class="nav-item">
               <a class="nav-link scroll" href="#services">SERVICES</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link scroll" href="#team">TEAM</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link scroll" href="#gallery">GALLERY</a>
             </li>
             <li class="nav-item">
               <a class="nav-link scroll" href="#stats">STATS</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link scroll" href="#news">NEWS</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link scroll" href="#contact">CONTACT</a>
             </li>
@@ -121,27 +125,44 @@ License URL: http://creativecommons.org/licenses/by/3.0/
           ></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img class="d-block" src="images/b1.jpg" alt="First slide" />
             <div class="carousel-caption">
-              <h5>Modern Houses</h5>
-              <p>Lorem Ipsum is simply dummy text</p>
+              <h5>Trust Homes</h5>
+              <p>Reliable, Quality, Trusted Home Construction</p>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block" src="images/b2.jpg" alt="Second slide" />
             <div class="carousel-caption">
-              <h5>Modern Villas</h5>
-              <p>Lorem Ipsum is simply dummy text</p>
+              <h5>Enduring Designs</h5>
+              <p>Timeless, Lasting, Iconic Architectural Creations.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block" src="images/b3.jpg" alt="Third slide" />
             <div class="carousel-caption">
-              <h5>Modern Apartments</h5>
-              <p>Lorem Ipsum is simply dummy text</p>
+              <h5>Elevate Living</h5>
+              <p>Enhance, Thrive, Flourish in Residences</p>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <img class="d-block" src="images/b4.jpg" alt="Fifth slide" />
+            <div class="carousel-caption">
+              <h5>Quality Constructs</h5>
+              <p>Exemplary, Durable, Precision Crafted Structures</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block" src="images/b5.jpg" alt="Fifth slide" />
+            <div class="carousel-caption">
+              <h5>Perfecting Interiors</h5>
+              <p>Refining Spaces with Impeccable Design</p>
             </div>
           </div>
         </div>
@@ -163,6 +184,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
+        <a
+          class="carousel-control-next"
+          href="#carouselExampleIndicators"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </div>
     <!-- //banner -->
@@ -171,7 +201,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       <div class="container py-sm-5 py-4">
         <div class="row">
           <div class="col-md-6 col-sm about-left">
-            <img src="images/ab.jpg" alt="image" />
+            <img src="images/b2.jpg" alt="image" />
           </div>
           <div class="col-md-6 col-sm about-right">
             <div class="title-heading-about">
@@ -186,16 +216,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
               streamlined and stress-free house construction experience.
             </p>
             <!-- Button trigger modal -->
-            <button
-              type="button"
-              class="btn btn-primary more-button"
-              data-toggle="modal"
-              data-target="#exampleModal33"
+            <a href="#contact"
+              ><button
+                type="button"
+                class="btn btn-primary more-button"
+                data-toggle="modal"
+              >
+                CONTACT US
+              </button></a
             >
-              CONTACT US
-            </button>
 
             <!-- Modal -->
+
+            <!--card ----- -->
             <div
               class="modal fade"
               id="exampleModal33"
@@ -204,6 +237,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
               aria-labelledby="exampleModalLabel"
               aria-hidden="true"
             >
+              
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
@@ -220,7 +254,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </button>
                   </div>
                   <div class="modal-body">
-                    <img src="images/ab.jpg" alt="image" />
+                    <!-- <img src="images/ab.jpg" alt="image" /> -->
                     <p>
                       Lorem Ipsum is simply dummy text of the printing and
                       typesetting industry. Lorem Ipsum has been the industry's
@@ -229,6 +263,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                   </div>
                 </div>
               </div>
+
+              <!-- ------- -->
             </div>
           </div>
         </div>
@@ -475,17 +511,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //services -->
     <!-- video section -->
     <div class="video-w3l" data-vide-bg="video/1">
-      <h2>We Make Your Dreams As Real</h2>
-      <p>Contrary to popular belief, Lorem Ipsum is not simply random text</p>
+      <h2>Your Dream Home Starts Here</h2>
+      <p>Embark on the journey to your dream home with us today</p>
       <!-- Button trigger modal -->
-      <button
+      <!-- <button
         type="button"
         class="btn btn-primary more-button3"
         data-toggle="modal"
         data-target="#exampleModal32"
       >
         MORE INFO
-      </button>
+      </button> -->
 
       <!-- Modal -->
       <div
@@ -526,105 +562,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="team py-lg-5 py-md-4 py-3" id="team">
       <div class="container py-sm-5 py-4">
         <div class="title-heading text-center mb-sm-5 mb-4">
-          <h3>TEAM</h3>
-          <h4>OUR TEAM</h4>
+          <h3>TESTIMONIALS</h3>
+          <h4>TESTIMONIALS</h4>
         </div>
-        <div class="team_grids">
-          <div class="row">
-            <div class="col-md-3 team_grid text-center">
-              <img src="images/t1.jpg" alt=" " class="img-fluid" />
-              <h3>Amanda Seylon</h3>
-              <p class="team_gridp">Designer</p>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry.
-              </p>
-              <ul class="footer_list_icons team_icons">
-                <li>
-                  <a href="#"><i class="fab fa-facebook-f"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fab fa-twitter"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fab fa-google-plus-g"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-md-3 team_grid text-center">
-              <img src="images/t2.jpg" alt=" " class="img-fluid" />
-              <h3>Laura Mark</h3>
-              <p class="team_gridp">Designer</p>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry.
-              </p>
-              <ul class="footer_list_icons team_icons">
-                <li>
-                  <a href="#"><i class="fab fa-facebook-f"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fab fa-twitter"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fab fa-google-plus-g"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-md-3 team_grid text-center">
-              <img src="images/t3.jpg" alt=" " class="img-fluid" />
-              <h3>Lusiana James</h3>
-              <p class="team_gridp">Designer</p>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry.
-              </p>
-              <ul class="footer_list_icons team_icons">
-                <li>
-                  <a href="#"><i class="fab fa-facebook-f"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fab fa-twitter"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fab fa-google-plus-g"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-md-3 team_grid text-center">
-              <img src="images/t4.jpg" alt=" " class="img-fluid" />
-              <h3>John Mark</h3>
-              <p class="team_gridp">Designer</p>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry.
-              </p>
-              <ul class="footer_list_icons team_icons">
-                <li>
-                  <a href="#"><i class="fab fa-facebook-f"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fab fa-twitter"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fab fa-google-plus-g"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
+
+
+
+
+
+
+
+
+
+
+
       </div>
     </div>
     <!-- team -->
@@ -1354,7 +1305,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     </div>
 
     <!-- ///faq section -->
-    <br /><br>
+    <br /><br />
     <!-- contact -->
     <div class="contact py-lg-5 py-md-4 py-3" id="contact">
       <div class="container py-sm-5 py-4">
@@ -1432,7 +1383,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                   />
                 </div>
                 <div class="form-group">
-                  <label>Example textarea</label>
+                  <label>Mob</label>
+                  <input
+                    type="email"
+                    class="form-control"
+                    placeholder="Email"
+                    required=""
+                  />
+                </div>
+                <div class="form-group">
+                  <label>What would you like to discuss?</label>
                   <textarea
                     class="form-control"
                     rows="3"
@@ -1527,13 +1487,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <li><a href="#services" class="scroll">Services</a></li>
                 <li><a href="#team" class="scroll">Team</a></li>
                 <li><a href="#gallery" class="scroll">Gallery</a></li>
-                <li><a href="#news" class="scroll">news</a></li>
+                <!-- <li><a href="#news" class="scroll">news</a></li> -->
                 <li><a href="#contact" class="scroll">contact</a></li>
               </ul>
             </div>
             <div class="col-md-4 footer-grid_section_1its_w3">
               <div class="footer-title">
-                <h3>Latest news</h3>
+                <h3>Completed Projects</h3>
               </div>
               <div class="d-flex justify-content-around">
                 <a href="#" class="col-4 fot_tp p-2">
@@ -1563,7 +1523,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="copyright">
           <p>
             © Creative Builders 2023. All Rights Reserved | Design by
-            <a href="http://w3layouts.com/">W3layouts</a>
+            <a href="https://www.instagram.com/consoletechnologies/"
+              >Console Technologies</a
+            >
           </p>
         </div>
       </div>
