--- a/web/index.html
+++ b/web/index.html
@@ -59,6 +59,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.min.css"
+    />
   </head>
   <body>
     <!-- nav -->
@@ -237,7 +246,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
               aria-labelledby="exampleModalLabel"
               aria-hidden="true"
             >
-              
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
@@ -566,16 +574,157 @@ License URL: http://creativecommons.org/licenses/by/3.0/
           <h4>TESTIMONIALS</h4>
         </div>
 
-
-
-
-
-
-
-
-
-
-
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div id="testimonial-slider" class="owl-carousel">
+                <!--  ////////////////////////////////////////////////////////  -->
+                <div
+                  class="testimonial-item equal-height style-6"
+                  style="height: 338px"
+                >
+                  <div class="testimonial-image cell-left"></div>
+                  <div class="cell-right">
+                    <div class="testimonial-name">Cinil Seby</div>
+                    <div class="testimonial-job">Erattupetta</div>
+                  </div>
+                  <div class="testimonial-content quote">
+                    <i class="fa fa-quote-left"> </i>We engaged Creative
+                    Builders for our home renovation, and their performance
+                    exceeded our expectations. The team demonstrated exceptional
+                    craftsmanship, adhered to timelines diligently, and
+                    communicated transparently throughout the project. Choosing
+                    Creative Builders was undoubtedly the best decision for a
+                    seamless and high-quality construction experience.
+                  </div>
+                </div>
+                <!--  ////////////////////////////////////////////////////////  -->
+                <div
+                  class="testimonial-item equal-height style-6"
+                  style="height: 338px"
+                >
+                  <div class="testimonial-image cell-left"></div>
+                  <div class="cell-right">
+                    <div class="testimonial-name">Anandhu P A</div>
+                    <div class="testimonial-job">Poonjar</div>
+                  </div>
+                  <div class="testimonial-content quote">
+                    <i class="fa fa-quote-left"> </i>Working with Creative
+                    Builders was a stress-free experience from start to finish.
+                    Their attention to detail, skilled workforce, and commitment
+                    to client satisfaction were evident in every phase of our
+                    commercial project. Creative Builders not only delivered on
+                    their promises but also added value with their innovative
+                    solutions, making them our go-to construction partner.
+                  </div>
+                </div>
+                <!--  ////////////////////////////////////////////////////////  -->
+                <div
+                  class="testimonial-item equal-height style-6"
+                  style="height: 338px"
+                >
+                  <div class="testimonial-image cell-left"></div>
+                  <div class="cell-right">
+                    <div class="testimonial-name">Midhun Babu</div>
+                    <div class="testimonial-job">Pala</div>
+                  </div>
+                  <div class="testimonial-content quote">
+                    <i class="fa fa-quote-left"> </i>Selecting Creative Builders
+                    for our new office construction was a game-changer. Their
+                    professionalism, efficiency, and dedication to precision
+                    transformed our vision into reality. Creative Builders
+                    turned what could have been a daunting process into a
+                    collaborative and enjoyable journey, leaving us with a space
+                    that perfectly aligns with our needs and exceeds our
+                    expectations.
+                  </div>
+                </div>
+                <!--  ////////////////////////////////////////////////////////  -->
+                <div
+                  class="testimonial-item equal-height style-6"
+                  style="height: 338px"
+                >
+                  <div class="testimonial-image cell-left"></div>
+                  <div class="cell-right">
+                    <div class="testimonial-name">Akash C S</div>
+                    <div class="testimonial-job">Thodupuzha</div>
+                  </div>
+                  <div class="testimonial-content quote">
+                    <i class="fa fa-quote-left"> </i>Kudos to Creative Builders
+                    for their exceptional service in building our dream home.
+                    Their team exhibited unmatched expertise, delivering a
+                    project that not only met but surpassed our aspirations.
+                    Creative Builder's commitment to quality, coupled with their
+                    unwavering reliability, made our construction journey smooth
+                    and rewarding. We highly recommend them to anyone seeking a
+                    reliable and top-notch construction partner.
+                  </div>
+                </div>
+                <!--  ////////////////////////////////////////////////////////  -->
+                <div
+                  class="testimonial-item equal-height style-6"
+                  style="height: 338px"
+                >
+                  <div class="testimonial-image cell-left"></div>
+                  <div class="cell-right">
+                    <div class="testimonial-name">Amal Siby</div>
+                    <div class="testimonial-job">Kottayam</div>
+                  </div>
+                  <div class="testimonial-content quote">
+                    <i class="fa fa-quote-left"> </i>Choosing Creative Builders
+                    for our property development was a decision we celebrated.
+                    Their adept team showcased unparalleled skill, adhered to
+                    timelines meticulously, and communicated seamlessly.
+                    Creative Builder’s commitment to excellence and reliability
+                    ensured a construction journey that not only met but
+                    exceeded our expectations, making them our trusted partner
+                    for future endeavours.
+                  </div>
+                </div>
+                <!--  ////////////////////////////////////////////////////////  -->
+                <div
+                  class="testimonial-item equal-height style-6"
+                  style="height: 338px"
+                >
+                  <div class="testimonial-image cell-left"></div>
+                  <div class="cell-right">
+                    <div class="testimonial-name">Adithyu M S</div>
+                    <div class="testimonial-job">Pala</div>
+                  </div>
+                  <div class="testimonial-content quote">
+                    <i class="fa fa-quote-left"> </i>Creative Builders turned
+                    our vision into reality with their exemplary construction
+                    services. Their attention to detail, transparent
+                    communication, and dedication to delivering on time were
+                    truly commendable. Creative Builders surpassed our
+                    expectations, and we are delighted with the quality and
+                    professionalism they brought to our project.
+                  </div>
+                </div>
+                <!--  ////////////////////////////////////////////////////////  -->
+                <div
+                  class="testimonial-item equal-height style-6"
+                  style="height: 338px"
+                >
+                  <div class="testimonial-image cell-left"></div>
+                  <div class="cell-right">
+                    <div class="testimonial-name">Ajay P S</div>
+                    <div class="testimonial-job">Ramapuram</div>
+                  </div>
+                  <div class="testimonial-content quote">
+                    <i class="fa fa-quote-left"> </i>Communication is paramount
+                    in any project, and Creative Builders excelled in keeping us
+                    informed every step of the way. Their transparency and
+                    openness fostered a collaborative environment, allowing us
+                    to be actively involved in decision-making and ensuring that
+                    our vision for the renovation was realized to perfection.
+                  </div>
+                </div>
+                <!--  ////////////////////////////////////////////////////////  -->
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <!-- team -->
@@ -1591,6 +1740,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         });
       });
     </script>
+
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-1.12.0.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"
+    ></script>
+
     <script src="js/SmoothScroll.min.js"></script>
 
     <!-- //smooth-scrolling-of-move-up -->
