Testimonial content edited

--- a/web/index.html
+++ b/web/index.html
@@ -589,13 +589,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="testimonial-job">Erattupetta</div>
                   </div>
                   <div class="testimonial-content quote">
-                    <i class="fa fa-quote-left"> </i>We engaged Creative
-                    Builders for our home renovation, and their performance
-                    exceeded our expectations. The team demonstrated exceptional
-                    craftsmanship, adhered to timelines diligently, and
-                    communicated transparently throughout the project. Choosing
-                    Creative Builders was undoubtedly the best decision for a
-                    seamless and high-quality construction experience.
+                    <i class="fa fa-quote-left"> </i>Creative Builders surpassed
+                    expectations in our home renovation. With exceptional
+                    craftsmanship, timely delivery, and transparent
+                    communication, they made our construction experience
+                    seamless. Choosing them was undoubtedly the best decision
+                    for high-quality results.
                   </div>
                 </div>
                 <!--  ////////////////////////////////////////////////////////  -->
@@ -650,14 +649,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="testimonial-job">Thodupuzha</div>
                   </div>
                   <div class="testimonial-content quote">
-                    <i class="fa fa-quote-left"> </i>Kudos to Creative Builders
-                    for their exceptional service in building our dream home.
-                    Their team exhibited unmatched expertise, delivering a
-                    project that not only met but surpassed our aspirations.
-                    Creative Builder's commitment to quality, coupled with their
-                    unwavering reliability, made our construction journey smooth
-                    and rewarding. We highly recommend them to anyone seeking a
-                    reliable and top-notch construction partner.
+                    <i class="fa fa-quote-left"> </i>Creative Builders delivered
+                    exceptional service, surpassing our expectations in building
+                    our dream home. Their unmatched expertise, commitment to
+                    quality, and unwavering reliability made our construction
+                    journey smooth and rewarding. Highly recommended for
+                    top-notch construction.
                   </div>
                 </div>
                 <!--  ////////////////////////////////////////////////////////  -->
@@ -672,13 +669,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                   </div>
                   <div class="testimonial-content quote">
                     <i class="fa fa-quote-left"> </i>Choosing Creative Builders
-                    for our property development was a decision we celebrated.
-                    Their adept team showcased unparalleled skill, adhered to
-                    timelines meticulously, and communicated seamlessly.
-                    Creative Builder’s commitment to excellence and reliability
-                    ensured a construction journey that not only met but
-                    exceeded our expectations, making them our trusted partner
-                    for future endeavours.
+                    for our property development was a celebration. Their adept
+                    team showcased unparalleled skill, adhered to timelines
+                    meticulously, and communicated seamlessly. Creative
+                    Builder's commitment to excellence ensured a construction
+                    journey that exceeded our expectations, making them our
+                    trusted partner for future endeavors.
                   </div>
                 </div>
                 <!--  ////////////////////////////////////////////////////////  -->
