completed project image added

--- a/web/index.html
+++ b/web/index.html
@@ -316,7 +316,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                       data-toggle="modal"
                       data-target="#exampleModal33"
                       role="button"
-                      >Read More »</a
+                      ></a
                     >
                   </div>
                 </div>
@@ -354,7 +354,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                       data-toggle="modal"
                       data-target="#exampleModal33"
                       role="button"
-                      >Read More »</a
+                      ></a
                     >
                   </div>
                 </div>
@@ -392,7 +392,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                       data-toggle="modal"
                       data-target="#exampleModal33"
                       role="button"
-                      >Read More »</a
+                      ></a
                     >
                   </div>
                 </div>
@@ -430,7 +430,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                       data-toggle="modal"
                       data-target="#exampleModal33"
                       role="button"
-                      >Read More »</a
+                      ></a
                     >
                   </div>
                 </div>
@@ -468,7 +468,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                       data-toggle="modal"
                       data-target="#exampleModal33"
                       role="button"
-                      >Read More »</a
+                      ></a
                     >
                   </div>
                 </div>
@@ -506,7 +506,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                       data-toggle="modal"
                       data-target="#exampleModal33"
                       role="button"
-                      >Read More »</a
+                      ></a
                     >
                   </div>
                 </div>
@@ -1069,14 +1069,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <div class="col-md-4 mb-4 latest-news">
               <div class="news_grid1">
                 <div class="news_grid_info">
-                  <p class="date">On Jan 20th, 2018</p>
-                  <h3>Office design</h3>
+                  <p class="date">On Jan 20th, 2021</p>
+                  <h3>Home design & Construction</h3>
                   <p>
-                    Vestibulum ut tincidunt lectus, vitae faucibus felis. Vivam
-                    uspretium leo eu iaculis lobortis.
+                   Mr.Seby George <br>
+                   Kanjar, Thod
                   </p>
                   <a href="#"
-                    >Read more <span class="fa fa-long-arrow-right"></span
+                    ><span class="fa fa-long-arrow-right"></span
                   ></a>
                 </div>
               </div>
