--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
     <!--gallery  -->
     <section class="wthree-row w3-gallery py-lg-5 py-md-4 py-3" id="gallery">
-      <div class="container-fluid text-center">
+      <!-- <div class="container-fluid text-center">
         <div class="title-heading text-center">
           <h3>GALLERY</h3>
           <h4>GALLERY</h4>
@@ -1668,8 +1668,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="copyright">
           <p>
             © Creative Builders 2023. All Rights Reserved | Design by
-            <a href="https://www.instagram.com/consoletechnologies/"
-              >Console Technologies</a
+            <a href="https://www.instagram.com/144pixels.adv/"
+              >144Pixels.adv</a
             >
           </p>
         </div>
