--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<!--A Design by W3layouts
-Author: W3layout
-Author URL: http://w3layouts.com
+<!--A Design by Console Technologies
+Author: Console Technologies
 License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
+License URL: Console Technologies
 -->
 <!DOCTYPE html>
 <html lang="zxx">
