completed projects gallery created

--- a/index.html
+++ b/index.html
@@ -1059,104 +1059,42 @@ License URL: Console Technologies
     <!-- Latest -->
     <div class="latest py-lg-5 py-md-4 py-3" id="news">
       <div class="container py-sm-5 py-4">
-        <div class="title-heading text-center mb-sm-5 mb-4">
-          <h3>COMPLETED PROJECTS</h3>
-          <h4>PROJECTS</h4>
-        </div>
-        <div class="news_grids">
-          <div class="row">
-            <div class="col-md-4 mb-4 latest-news">
-              <div class="news_grid1">
-                <div class="news_grid_info">
-                  <p class="date">On Jan 20th, 2021</p>
-                  <h3>Home design & Construction</h3>
-                  <p>
-                   Mr.Seby George <br>
-                   Kanjar, Thod
-                  </p>
-                  <a href="#"
-                    ><span class="fa fa-long-arrow-right"></span
-                  ></a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-4 latest-news">
-              <div class="news_grid2">
-                <div class="news_grid_info">
-                  <p class="date">On Jan 20th, 2018</p>
-                  <h3>apartments design</h3>
-                  <p>
-                    Vestibulum ut tincidunt lectus, vitae faucibus felis. Vivam
-                    uspretium leo eu iaculis lobortis.
-                  </p>
-                  <a href="#"
-                    >Read more <span class="fa fa-long-arrow-right"></span
-                  ></a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-4 latest-news">
-              <div class="news_grid3">
-                <div class="news_grid_info">
-                  <p class="date">On Jan 20th, 2018</p>
-                  <h3>Restaurant design</h3>
-                  <p>
-                    Vestibulum ut tincidunt lectus, vitae faucibus felis. Vivam
-                    uspretium leo eu iaculis lobortis.
-                  </p>
-                  <a href="#"
-                    >Read more <span class="fa fa-long-arrow-right"></span
-                  ></a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 latest-news">
-              <div class="news_grid4">
-                <div class="news_grid_info">
-                  <p class="date">On Jan 20th, 2018</p>
-                  <h3>Office design</h3>
-                  <p>
-                    Vestibulum ut tincidunt lectus, vitae faucibus felis. Vivam
-                    uspretium leo eu iaculis lobortis.
-                  </p>
-                  <a href="#"
-                    >Read more <span class="fa fa-long-arrow-right"></span
-                  ></a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 latest-news">
-              <div class="news_grid5">
-                <div class="news_grid_info">
-                  <p class="date">On Jan 20th, 2018</p>
-                  <h3>apartments design</h3>
-                  <p>
-                    Vestibulum ut tincidunt lectus, vitae faucibus felis. Vivam
-                    uspretium leo eu iaculis lobortis.
-                  </p>
-                  <a href="#"
-                    >Read more <span class="fa fa-long-arrow-right"></span
-                  ></a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 latest-news">
-              <div class="news_grid6">
-                <div class="news_grid_info">
-                  <p class="date">On Jan 20th, 2018</p>
-                  <h3>Restaurant design</h3>
-                  <p>
-                    Vestibulum ut tincidunt lectus, vitae faucibus felis. Vivam
-                    uspretium leo eu iaculis lobortis.
-                  </p>
-                  <a href="#"
-                    >Read more <span class="fa fa-long-arrow-right"></span
-                  ></a>
-                </div>
-              </div>
-            </div>
+          <div class="title-heading text-center mb-sm-5 mb-4">
+              <h3>COMPLETED PROJECTS</h3>
+              <h4>PROJECTS</h4>
           </div>
+          <div class="news_grids">
+            <div class="row">
+                <div class="col-md-4 mb-4 latest-news">
+                    <div class="news_grid1" onclick="showGallery(this)">
+                        <div class="news_grid_info">
+                            <p class="date">On Jan 20th, 2021</p>
+                            <h3>Home design & Construction</h3>
+                            <p>
+                                Mr. Seby George <br>
+                                Kanjar, Thodupuzha
+                            </p>
+                            <a href="#"><span class="fa fa-long-arrow-right"></span></a>
+                        </div>
+                        
+
+                       
+                        <div class="gallery-container">
+                          <div class="row">
+                            <!-- Add multiple images for the gallery here -->
+                            <img src="../images/n1.jpg" alt="Gallery Image 1">
+                            <img src="../images/n2.jpg" alt="Gallery Image 2">
+                            <img src="../images/n3.jpg" alt="Gallery Image 3">
+                            <!-- Add more images as needed -->
+                        </div>
+                      </div>
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
+</div>
+  
       </div>
     </div>
     <!-- //Latest -->
