--- a/index.html
+++ b/index.html
@@ -1454,7 +1454,7 @@ License URL: Console Technologies
                   id="fname"
                     type="text"
                     class="form-control"
-                    placeholder="First name"
+                    placeholder="Name"
                     required=""
                     name="name"
                   />
@@ -1473,7 +1473,7 @@ License URL: Console Technologies
                   
                 </div>
                 <div class="form-group">
-                  <label>Mob</label>
+                  <label>Mobile</label>
                   <input
                     type="number"
                     class="form-control"
