--- a/index.html
+++ b/index.html
@@ -1094,29 +1094,28 @@ License URL: Console Technologies
             </div>
         </div>
 
-
-        <div class="news_grids  ">
+        <div class="news_grids">
           <div class="row">
               <div class="col-md-4 mb-4 latest-news">
-                  <div class="news_grid1" onclick="showGallery(this)">
+                  <div class="news_grid2" onclick="showGallery(this)">
                       <div class="news_grid_info">
-                          <p class="date">On Jan 20th, 2021</p>
+                          <p class="date">On oct 04th, 2021</p>
                           <h3>Home design & Construction</h3>
                           <p>
-                              Mr. Seby George <br>
-                              Kanjar, Thodupuzha
+                            Mr.Kuriyachan Manayani <br>
+                              Thodupuzha
                           </p>
                           <a href="#"><span class="fa fa-long-arrow-right"></span></a>
                       </div>
                       
 
                      
-                      <div class="gallery-container">
+                      <div class="gallery-container2">
                         <div class="row">
                           <!-- Add multiple images for the gallery here -->
-                          <img src="../images/n1.jpg" alt="Gallery Image 1">
-                          <img src="../images/n2.jpg" alt="Gallery Image 2">
-                          <img src="../images/n3.jpg" alt="Gallery Image 3">
+                          <img src="../images/o1.PNG" alt="Gallery Image 1">
+                          <img src="../images/o2.PNG" alt="Gallery Image 2">
+                          <img src="../images/o3.PNG" alt="Gallery Image 3">
                           <!-- Add more images as needed -->
                       </div>
                     </div>
