completed project added but not aligned 2

--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@ License URL: Console Technologies
         <div class="news_grids">
           <div class="row">
               <div class="col-md-4 mb-4 latest-news">
-                  <div class="news_grid2" onclick="showGallery(this)">
+                  <div class="news_grid2" onclick="showGallery2(this)">
                       <div class="news_grid_info">
                           <p class="date">On oct 04th, 2021</p>
                           <h3>Home design & Construction</h3>
